fix z-index

--- a/src/scss/themes/_default.scss
+++ b/src/scss/themes/_default.scss
@@ -40,7 +40,7 @@ header {
 	display: block;
 	top: 0;
 	width: 100%;
-	z-index: 1;
+	z-index: 2;
 
 	li {
 		color: $header-link-color;
